namespaces/live.cloud-platform.service.justice.gov.uk/utiac-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "utiac-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMCTS"
    cloud-platform.justice.gov.uk/slack-channel: "dts-legacy-apps-support-team"
    cloud-platform.justice.gov.uk/application: "utiac"
    cloud-platform.justice.gov.uk/owner: "DTS Legacy: dts-legacy-apps-support-team@hmcts.net"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/tribunaldecisions-utiac"
    cloud-platform.justice.gov.uk/team-name: "dts-legacy"
    cloud-platform.justice.gov.uk/review-after: ""
